# crash-it

./: CMakeLists.txt  README.md
include/crash-it/: process.h  remote.h  shellcode.h  util.h
include/crash-it/crash/: app_exit.h  exception.h  fault.h  hang.h  illegal_instruction.h  terminate.h  unmap.h
src/: main.c  process.c  remote.c  shellcode.c  util.c
src/crash/: app_exit.c  exception.c  fault.c  hang.c  illegal_instruction.c  terminate.c  unmap.c
